[package]
name = "lassdb"
version = "0.1.0"
edition = "2024"
description = "A lightweight, embeddable Rust database with optional WASM support"
authors = ["Vineet Kumar <vineetgarg817@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/vineet817/lassdb"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"


# Optional future CLI support
clap = { version = "4.3", features = ["derive"] }
toml = "0.8.20"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
once_cell = "1.18"
web-sys = { version = "0.3", features = ["console"] }
anyhow = "1.0"
schemars = "0.8"
sled = "0.34"
bincode = "1.3"

[dev-dependencies]

[features]
# Enable this for web/WASM storage later
wasm = []

[lib]
name = "lassdb"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "cli"
path = "examples/cli.rs"
